crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__bytes_literals.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtExpr
  - ExprBytesLiteral
    - BytesLiteral
    - BytesLiteral
    - BytesLiteral
