crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__class_type_parameters.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtClassDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - StmtExpr
    - ExprEllipsisLiteral
