crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__compare.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtExpr
  - ExprCompare
    - ExprNumberLiteral
    - Lt
    - Lt
    - ExprName
    - ExprNumberLiteral
