crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__decorators.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtFunctionDef
  - ExprName
  - Parameters
  - StmtPass
- StmtClassDef
  - ExprName
  - StmtPass
