crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__dict_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtExpr
  - ExprDictComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
    - ExprBinOp
      - ExprName
      - Pow
      - ExprNumberLiteral
