crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__f_strings.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprFString
    - StringLiteral
    - FString
      - FTStringLiteralElement
      - FTStringInterpolatedElement
        - ExprName
        - FTStringLiteralElement
        - FTStringInterpolatedElement
          - ExprName
        - FTStringLiteralElement
      - FTStringLiteralElement
