crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__function_arguments.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtFunctionDef
  - Parameters
    - ExprNumberLiteral
    - ExprNumberLiteral
    - ExprNumberLiteral
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
    - Parameter
  - StmtPass
