crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtFunctionDef
  - Parameters
    - ExprNumberLiteral
    - ExprNumberLiteral
    - Parameter
    - Parameter
    - Parameter
    - Parameter
  - StmtPass
