crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__function_type_parameters.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtFunctionDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - Parameters
  - StmtExpr
    - ExprEllipsisLiteral
