crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__list_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtExpr
  - ExprListComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
