crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__match_class_pattern.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtMatch
  - ExprName
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
    - StmtExpr
      - ExprEllipsisLiteral
  - MatchCase
    - PatternMatchClass
      - ExprName
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
      - PatternMatchValue
        - ExprNumberLiteral
    - StmtExpr
      - ExprEllipsisLiteral
