crates/ruff_python_ast_integration_tests/tests/snapshots/visitor__set_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/visitor.rs
expression: trace
snapshot_kind: text
---
- StmtExpr
  - ExprSetComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
